--- a/ruoyi-generator/src/main/resources/vm/vue/v3/index-tree.vue.vm
+++ b/ruoyi-generator/src/main/resources/vm/vue/v3/index-tree.vue.vm
@@ -454,8 +454,7 @@
 
     /** 提交按钮 */
     function submitForm() {
-        proxy.#[[$]]
-        #refs["${businessName}Ref"].validate(valid => {
+        proxy.#[[$]]#refs["${businessName}Ref"].validate(valid => {
             if (valid) {
                 #foreach($column in $columns)
                 #if($column.htmlType == "checkbox")
@@ -479,8 +478,7 @@
                         BusinessName
                     }
                     (form.value).then(response => {
-                        proxy.#[[$modal]]
-                        #.msgSuccess("修改成功");
+                        proxy.#[[$modal]]#.msgSuccess("修改成功");
                         open.value = false;
                         getList();
                     });
@@ -492,8 +490,7 @@
                         BusinessName
                     }
                     (form.value).then(response => {
-                        proxy.#[[$modal]]
-                        #.msgSuccess("新增成功");
+                        proxy.#[[$modal]]#.msgSuccess("新增成功");
                         open.value = false;
                         getList();
                     });
@@ -504,8 +501,7 @@
 
     /** 删除按钮操作 */
     function handleDelete(row) {
-        proxy.#[[$modal]]
-        #.confirm('是否确认删除${functionName}编号为"' + row.$
+        proxy.#[[$modal]]#.confirm('是否确认删除${functionName}编号为"' + row.$
         {
             pkColumn.javaField
         }
@@ -524,8 +520,7 @@
             ;
         }).then(() => {
             getList();
-            proxy.#[[$modal]]
-            #.msgSuccess("删除成功");
+            proxy.#[[$modal]]#.msgSuccess("删除成功");
         }).catch(() => {
         });
     }
