--- a/ruoyi-generator/src/main/resources/vm/vue/v3/index.vue.vm
+++ b/ruoyi-generator/src/main/resources/vm/vue/v3/index.vue.vm
@@ -525,8 +525,7 @@
 
     /** 提交按钮 */
     function submitForm() {
-        proxy.#[[$]]
-        #refs["${businessName}Ref"].validate(valid => {
+        proxy.#[[$]]#refs["${businessName}Ref"].validate(valid => {
             if (valid) {
                 #foreach($column in $columns)
                 #if($column.htmlType == "checkbox")
@@ -557,8 +556,7 @@
                         BusinessName
                     }
                     (form.value).then(response => {
-                        proxy.#[[$modal]]
-                        #.msgSuccess("修改成功");
+                        proxy.#[[$modal]]#.msgSuccess("修改成功");
                         open.value = false;
                         getList();
                     });
@@ -570,8 +568,7 @@
                         BusinessName
                     }
                     (form.value).then(response => {
-                        proxy.#[[$modal]]
-                        #.msgSuccess("新增成功");
+                        proxy.#[[$modal]]#.msgSuccess("新增成功");
                         open.value = false;
                         getList();
                     });
@@ -592,8 +589,7 @@
         }
     ||
         ids.value;
-        proxy.#[[$modal]]
-        #.confirm('是否确认删除${functionName}编号为"' + _$
+        proxy.#[[$modal]]#.confirm('是否确认删除${functionName}编号为"' + _$
         {
             pkColumn.javaField
         }
@@ -613,8 +609,7 @@
             ;
         }).then(() => {
             getList();
-            proxy.#[[$modal]]
-            #.msgSuccess("删除成功");
+            proxy.#[[$modal]]#.msgSuccess("删除成功");
         }).catch(() => {
         });
     }
@@ -663,8 +658,7 @@
         value.length == 0
     )
         {
-            proxy.#[[$modal]]
-            #.msgError("请先选择要删除的${subTable.functionName}数据");
+            proxy.#[[$modal]]#.msgError("请先选择要删除的${subTable.functionName}数据");
         }
     else
         {
